@@ -7,6 +7,7 @@
 - Aureport and ausearch do not need to stat the dispatcher
 - Make auparse handle empty AUSOURCE_FILE_ARRAY correctly (Miloslav Trmač)
 - Allow ausearch/report to specify multiple node names (Lenny Bruzenak)
+- Correct checking of != operator in audit_rule_fieldpair_data
 
 1.7.13
 - Disable libev asserts unless --with-debug passed to configure
